translated 1st chapter to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -320,6 +320,85 @@
   "c1_text41": "Т-лимфоциттердин ",
   "c1_text42": "жардамчылары (хелперлер) болуп саналат, алар бүтүндөй иммундук системанын жөнгө салынган ишин уюштурат. Аларды ",
   "c1_text43": "CD4 ",
-  "c1_text44": "клеткалары деп аташат. \n\n"
-
+  "c1_text44": "клеткалары деп аташат. \n\n",
+  "c1_text45": "Адамды көптөгөн микроорганизмдер (вирустар, бактериялар, грибоктор) курчап турат, эгер алар организмге түшсө, жугуштуу ооруларга себепчи болушу мүмкүн (сасык тумоо, менингит, кургак учук, ич өткөк ж.б.).",
+  "c1_10text1": "Көпчүлүк учурда иммундук система адамды оорулардан коргоп, адамдын организмине түшкөн микроорганизмдерди жок кылат. Бирок, ",
+  "c1_10text2": "ВИЧ – адамдын иммундук жетишсиздигинин вирусу – иммунитеттин негизги клеткаларын жок кылат (CD4 клеткаларын). Натыйжада иммундук жетишсиздик пайда болуп, организм башка инфекциялар менен күрөштө алсыз болуп калат.",
+  "c1_11text1": "ВИЧти жуктурган адамдын иммундук системасынын абалы CD4 клеткаларын саноо менен аныкталат. Алардын кандагы саны, адатта, 1 микролитрде 500дөн 1500гө чейин клетканы түзөт. ВИЧ-инфекциясы менен жашаган адамда бир же бир нече оппортунисттик инфекциялар табылганда жана CD4 клеткаларынын деңгээли 1 микролитр канда 200дөн төмөнгө азайганда, анда бул СПИД баскычы башталганынан кабар берет.",
+  "c1_12text1": "Вирус адамдын организмине кантип кирет\n\n",
+  "c1_12text2": "Биз менен байланышта кала бергениңиз үчүн рахмат. Бул бөлүмдө маанилүү маалымат камтылган, ал сизге ВИЧти жуктуруп алуу тобокелдигин аныктоого жардам берип, вирустан оолак болуунун жолдорун көрсөтүп берет. \n\n",
+  "c1_12text3": "ВИЧ - ",
+  "c1_12text4": " бул адамдын иммундук жетишсиздигинин вирусу. Бул адам гана аны менен ооруйт жана вирус адамдан адамга жугат дегенди билдирет.",
+  "c1_12text5": "\n\nВИЧ үч жол менен жугат:",
+  "c1_12text6": "Жыныстык жол",
+  "c1_12text7": "Ийне аркылуу",
+  "c1_12text8": "ВИЧ-позитивдүү энеден балага кош бойлуулук, төрөт жана эмчек эмизүү учурунда жугат.",
+  "c1_13text1": "Жыныстык жол: ",
+  "c1_13text2": " ВИЧ жыныстык катнаштын бардык түрлөрү аркылуу жугат. Өзгөчө аналдык жыныстык катнаштар; жыныстык өнөктөштөрдү тез-тез алмаштыруу; кокустан боло калган жыныстык байланыш; зордук-зомбулук менен коштолгон жана топтук жыныстык катнаш кооптуу. Жыныстык жол менен жугуучу оорулар (сифилис, гонорея ж.б.)  ВИЧ-инфекциясынын жуктуруп алуу тобокелдигин көбөйтөт.",
+  "c1_13text3": "ВИЧти жуктуруп алуу тобокелдигин төмөнкүлөр азайтат:",
+  "c1_13text4": " Жыныстык катнаштан кармануу; вирусту жуктурбаган бир өнөктөш менен гана болуу; презервативдерди жана суунун негизинде жасалган атайын майлоочу материалдарды (лубриканттарды) колдонуу.",
+  "c1_14text1": "ВИЧ ийне аркылуу төмөнкүдөй жолдор менен жугушу мүмкүн:",
+  "c1_14text2": " баңгизатты ийне аркылуу башкалар менен чогуу колдонгондо; кокус адамдардан медициналык кызмат көрсөтүүлөрдү алып жатканда (кан куюу; хирургиялык операциялар; инъекциялар маалында; табибдерде теринин үстүнкү катмарын бузуу менен коштолгон дарылануу маалында – кесиктер; кан чыгаруу; сүннөткө отургузуу);тазаланбаган аспап менен татуировка, пирсинг жасаганда, ийнелерди сайып дарылаганда. ",
+  "c1_14text3": "Вирусту жуктуруу тобокелдигин азайтуучу учурлар:",
+  "c1_14text4": "баңгизатын колдонуудан баш тартуу, баңгизатты даярдоо үчүн башка бирөөнүн ийнесин жана идишин колдонбоо; медициналык кызмат көрсөтүүлөрдү медициналык мекемелерден гана алуу; тату, пирсинг жасатканда жана медициналык мекемелерден башка жерлерде ар кандай процедураларды жасатканда стерилдүү аспаптарды колдонуу",
+  "c1_15text1": "ВИЧ-позитивдүү энеден балага жугат.",
+  "c1_15text2": "ВИЧ-инфекциясын эрте аныктап, дарылана баштоо балага ВИЧ-инфекциянын жуктуруп алуу коркунучун азайтат.",
+  "c1_16text1": "Бейөкмөт уюмдардын консультантынан же медициналык борбордон тобокелдиктерди баалоо жана азайтуу боюнча кеңеш алууну сунуш кылабыз.",
+  "c1_16text2": "\nВирусту жуктуруп алуу тобокелдигин өз алдынча да аныктай аласыз. Бул үчүн төмөнкү бир нече суроолорго жооп бериңиз. Эгерде сиз жок дегенде бир суроого “ооба” деп жооп берсеңиз, анда консультация алып, ВИЧке тест тапшырып, андан соң өз коопсуздугуңуз үчүн чараларды көрүшүңүз керек:",
+  "c1_16text3": "Жыныстык мамиледе болдуңуз беле?",
+  "c1_16text4": "Жыныстык катнаш учурунда дайыма презерватив колдончу белеңиз?",
+  "c1_16text5": "Бирден көп жыныстык өнөктөшүңүз болгонбу?",
+  "c1_16text6": "Сиздин же өнөктөшүңүздүн жыныстык органдарында жаралар болгонбу,жыныстык органдардан адаттан тыш бөлүп чыгууларды байкадыңыз беле, ичиңиздин ылдый жагы ооруган беле, же болбосо жыныстык жол менен жугуучу инфекциялардан (сифилис, гонорея, трихомониаз) дарыландыңыз беле?",
+  "c1_17text1": "Сиз жок дегенде бир жолу баңгизатын сайып көрдүңүз беле?",
+  "c1_17text2": "Өнөктөшүңүз/өнөктөштөрүңүз менен баңгизатты чогуу колдонгон учурлар болду беле?",
+  "c1_17text3": "Сиз гепатит менен оорудуңуз беле?",
+  "c1_17text4": "\n\nВИЧ-ИНФЕКЦИЯСЫНЫН БАСКЫЧТАРЫ ЖАНА БЕЛГИЛЕРИ\n\n",
+  "c1_17text5": "Иммундук жетишсиздиктин оордугуна жараша ВИЧ инфекциясын баскычтарга бөлүшөт, мында СД4 лимфоциттеринин санына, ошондой эле инфекциянын белгилерине көңүл бурулат, кээде эч кандай белгиси жок эле башталып, оор иммундук жетишсиздикке чейин өнүгүп кетет (СПИД баскычы).",
+  "c1_18text1": "ВИЧ инфекциясынын 4 баскычы бар, ошону менен катар 3-4-баскычтары иммунитеттин олуттуу төмөндөшү менен мүнөздөлөт. Алар ошондой эле ",
+  "c1_18text2": "ВИЧ инфекциясынын өнүккөн баскычтары ",
+  "c1_18text3": " деп да аталат.3-баскыч СД4 клеткаларынын саны 200дөн 350гө чейин болгондо башталат. СД4 клеткаларынын саны 200дөн аз болгондо бул 4-баскычка жеткенин же СПИД баскычына өткөнүн билдирет.",
+  "c1_18text4": "\nБир гана жолу жыныстык катнаш болгон же ВИЧ менен жашаган адам менен баңгизатты бир гана жолу чогуу колдонгон учурларды кошпогондо, вирус качан жукканын аныктоо дээрлик мүмкүн эмес.",
+  "c1_18text5": "\nВИЧ-инфекциясынын өзгөчөлүгү – вирус узак убакыт бою билинбей жүрө берет -",
+  "c1_18text6": "ВИЧ-инфекциясынын биринчи баскычы",
+  "c1_18text7": "жылдарга созулушу мүмкүн. Адамдын сырткы келбетине карап анда ВИЧ болуп-болбогонун аныктоо мүмкүн эмес. ВИЧ-инфекциясы бар адам өзүн дени сак сезиши мүмкүн, бирок ошол эле учурда ВИЧти башкаларга жугузуп жүрө берет. Мындан тышкары, ВИЧ организмге киргенден баштап, иммундук системанын клеткаларын тынымсыз талкалай берет. Себеби адам медициналык жардам сурап кайрылганда организмдеги ВИЧти лабораториялык ыкмалар менен гана аныктоого болот. Бул учурда ВИЧ-инфекциясы акыркы баскычына жетип, кээде иммундук системага катуу зыян келтире баштайт",
+  "c1_19text1": "",
+  "c1_19text2": "Экинчи баскычта",
+  "c1_19text3": "адам салмак таштайт (10 пайызга чейин), тез-тез ооруйт жана ВИЧ инфекциясынын башка белгилери байкалат; дене табы жогорулайт, адам тез эле чарчайт, катуу тердейт.",
+  "c1_19text4": "ВИЧ-инфекциясынын андан ары өнүгүшү иммунитеттин катуу жабыркашы менен ",
+  "c1_19text5": "(3-4-баскычтар) ",
+  "c1_19text6": " байланыштуу болот. Бул баскычтардагы белгилер жана анын жүрүшү оппортунисттик илдеттердин (ОИ) – көбүнчө ВИЧ жок адамдарда кездешпеген оорулардын аракети менен шартталат; ошондой эле бул баскычта жугуштуу оорулар, шишиктер көп кездешет, акыл-эс бузулушу мүмкүн. Эң кеңири тараган оппортунисттик илдеттер кургак учук жана пневмоцисттик пневмония. 4-баскычта кахексия пайда болот (адам катуу арыктайт).эгерде илдетти дарылабаса, адам өлүмүнө алып келет.",
+  "c1_20text1": "Эрте мөөнөттө дарылоо ооруларды токтотуп, атүгүл эрте баскычтарына да кайтарышы мүмкүн. Бирок, адамдар көбүнчө СПИД баскычына жеткенде, кээде иммунитети толук талкаланып, дарылоо мындан ары жардам бере албай калганда жардам сурап кайрылышат. Бул адамдар өз статусун билбеши мүмкүн, бирок статусун билип турса да, дарылануудан баш тарткандар да бар.\n",
+  "c1_20text2": "Учурда ВИЧ менен жашаган адамдар СПИДден жана оппортунисттик оорулардан өлбөшү керек. Бул үчүн ВИЧ инфекциясын дарылоону мүмкүн болушунча эрте баштоо зарыл. Мамлекет оорулууну акысыз дарылайт.",
+  "c1_21text1": "\nВИЧ АДАМДЫН ОРГАНИЗМИНЕ КИРГЕНДЕ ЭМНЕ БОЛОТ?\n\n",
+  "c1_21text2": "ВИЧ-инфекциясы ",
+  "c1_21text3": "– бул адамдын иммундук жетишсиздик вирусунан келип чыккан өнөкөт жугуштуу оору (ВИЧ), бул вирус иммундук системаны талкалайт. Эгерде адам дарыланбаса, ВИЧ-инфекциясы жугуштуу ооруларга, шишиктердин пайда болушуна жана алынган иммундук жетишсиздик синдромуна (СПИД) алып келет.",
+  "c1_21text4": "\nВИЧ адамдын организмине киргенде иммундук системанын клеткаларына, тактап айтканда, жардамчы Т-лимфоциттерге (СД4 клеткаларына) чабуул коёт. Натыйжада, жабыркаган клетка вирустарды өзү чыгара баштайт. Мунун натыйжасында клетка организмди коргой албай калат жана өлөт. Күнүнө 10 миллиардга чейин жаңы вирустук бөлүкчөлөр пайда болуп, миллиондогон СД4 клеткалары күн сайын талкаланып турат. Клеткадан жаңы вирустар чыгып, башка СД4 клеткаларын да жабыркатат. CD4 клеткаларынын санынын азайышы иммунитеттин төмөндөшүнө алып келет, ошон үчүн иммунитет организмди жугуштуу жана башка оорулардын козгогучтарынан коргой албай калат. Бул оорулар иммундук системасы күчтүү адамдарда сейрек кездешет. Алар СПИД-индикатордук оорулар же ",
+  "c1_21text5": "оппортунисттик инфекциялар ",
+  "c1_21text6": "деп аталат.",
+  "c1_22text1": "ВИЧтин көбөйүү механизми",
+  "c1_22text2": "ВИЧ инфекциясын жуктурган адамдын иммундук системасынын абалы СД4 клеткаларын саноо менен аныкталат. Алардын кандагы саны адатта 1 микролитрде 500дөн 1500 клеткага чейин болот. ВИЧ менен жашаган адамда бир же бир нече оппортунисттик инфекция бар болгондо жана СД4 клеткаларынын деңгээли 1 микролитр канда 200дөн төмөнгө түшкөндө анда бул СПИД баскычы башталганынан кабар берет.",
+  "c1_23text1": "\n\nВИЧ кандай жолдор менен жукпайт?\n\n",
+  "c1_23text2": "Кооптуу болбогон нерседен корко бербеш үчүн ВИЧ кайсы жолдор менен жукпай турганын билип алганыбыз маанилүү. Бул бизге коркунучтуу болгон жерде тобокелдикти  азайтып; өзүбүздү жана айланабыздагы адамдарды коргоп калуу үчүн керек. Унутпаңыз, ВИЧ үч гана жол менен жугат (бул бөлүмдү караңыз).",
+  "c1_23text3": "\n\nВИЧ төмөнкү жолдор менен жукпайт\n",
+  "c1_23text4": "Кучакташканда, кол алышканда, өбүшкөндө, жөтөлгөндө жана чүчкүргөндө",
+  "c1_24text1": "Жөтөлгөндө жана чүчкүргөндө",
+  "c1_24text2": "Тамак-аш даярдаганда жана аны чогуу ичкенде; идиш-аякты, сүлгүнү жана шейшепти бирге колдонгондо. Баарлашып отурганда, китепти жана тиричилик буюмдарын биргелешип пайдаланганда жукпайт",
+  "c1_25text1": "Даараткананы, душту, ваннаны чогуу колдонгондо; бассейнде сүзгөндө, спорт менен машыкканда жукпайт",
+  "c1_25text2": "Курт-кумурскалар (чиркейлер, аарылар) чакканда, жаныбарлар тиштегенде вирус жукпайт.",
+  "c1_26text1": "\nВИЧ менен жашаган адам күнүмдүк жашоодо коркунуч жаратпайт. Сиз аны менен эркин баарлашып, бир бөлмөдө жашап, бир класста, бир группада чогуу окуй аласыз; бир столго отуруп; клубдарга, кафелерге, дискотекаларга барып, чогуу эс алсаңыз болот.",
+  "c1_27text1": "ВИЧ-статусум оң чыкканын айтышса, эмне кылышым керек?\n",
+  "c1_27text2": "Биз ВИЧти жуктуруп алууга эмне себеп болгону тууралуу ойлонуп, өз тандообузду жасашыбыз керек – жашоону кандай болсо, ошондой улантабыз же аны жакшы жагына өзгөртөбүз.",
+  "c1_27text3": "Терең ойлонуп, үй-бүлөлүк жашооңузга карата жоопкерчиликтүү чечим кабыл алышыңыз керек. ВИЧ-инфекциясы жыныстык жашоо бүттү дегенди билдирбейт,вирус үй-бүлө куруу жана дени сак балалуу болуу мүмкүнчүлүктөрүн чектебейт.Жаныңыздагы адамга жана жаңы төрөлгөн балаңызга илдетти жуктуруп алуу тобокелдигин эстен чыгарбаш керек.  Жыныстык өнөктөш менен ВИЧ статусу тууралуу сүйлөшүү жардам берет. АРТны эрте мөөнөттө баштоо, вирустук жүктү жеңилдетүү, коргоочу каражаттарды (презервативди) колдонуу ВИЧти жыныстык өнөктөшкө жуктуруп алуудан коргоп, ошондой эле кош бойлуулукту жана  төрөттү пландаштырууга мүмкүнчүлүк берет.",
+  "c1_28text1": "Өзүңүздүн ВИЧ статусуңузду жакын адамыңызга/жыныстык өнөктөшүңүзгө ачык айтуу стресс менен күрөшүп, жакын адамдарыңыздан колдоо табууга жардам берет.",
+  "c1_28text2": "Антиретровирустук терапиянын (АРТ) жардамы менен ВИЧке чалдыккандар узак жана жемиштүү өмүр сүрө алышат, бул үчүн төмөнкүлөр талап кылынат:",
+  "c1_28text3": "АРТны тынымсыз ичип туруу, дарыгердин айткандарын жасоо керек;",
+  "c1_28text4": "эгер кургак учук менен оорусаңыз, ичимдик же баңгизат колдонсоңуз,АРТ менен бирге тиешелүү дарылануу үчүн адистерге кайрылыңыз;",
+  "c1_28text5": "зарыл болсо,сасык тумоо, COVID, вирустук гепатит өңдүү оорулардын алдын алуу үчүн эмдөөдөн өтүңүз (дарыгердин көрсөтмөсү боюнча);",
+  "c1_28text6": "тамекини таштап же анын санын олуттуу түрдө азайтыңыз;",
+  "c1_29text1": "баңгизат колдонсоңуз метадондук терапияны баштаңыз;",
+  "c1_29text2": "туура тамактанып, таза суудан көп ичиңиз;",
+  "c1_29text3": "күнүмдүк режимиңизди туура уюштуруп, ишти, эс алууну жана спортту чогуу ала жүрүңүз",
+  "c1_29text4": "Эсиңизден чыгарбаңыз, ВИЧ-инфекциясы жок адамга караганда ВИЧке чалдыккан адам үчүн ар кандай инфекция бир кыйла коркунучтуу болот, ошондуктан жугуштуу оорулардын алдын алуу чараларын катуу сакташ керек.Себеби, өнөктөшүңүзгө оору жуктургандан тышкары, өзүңүз да кошумча дагы бир ооруга чалдыгышыңыз мүмкүн.",
+  "c1_30text1": "ВИЧ менен жашаган адамдарга ВИЧтин башка түрү кайра жугушу мүмкүн экенин эстен чыгарбоо керек, бул болсо анын ден соолугуна чоң коркунуч туудурат.",
+  "c1_30text2": "Сиз менен жыныстык катнашта болгон же ийнени чогуу колдонгон адамдар  алар да ВИЧти жуктуруп алышы мүмкүн экенин биле бербеши ыктымал. Аларга өз убагында дарыланып, ден соолугун жана өмүрүн сактап калуу үчүн  ВИЧке тест тапшырууну сунуш кылуу керек. "
 }
