--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -319,7 +319,86 @@
   "c1_text41": "Т-лимфоциты ",
   "c1_text42": "помощники (хелперы), которые организуют слаженную работу всей иммунной системы. Их называют ",
   "c1_text43": "СД4 ",
-  "c1_text44": "клетками.\n\n"
-
+  "c1_text44": "клетками.\n\n",
+  "c1_text45": "Человека окружает множество микроорганизмов (вирусы, бактерии, грибки),которые при попадании в организм могут стать причиной инфекционных заболеваний (грипп, менингит, туберкулез, дизентерия и т. п.). ",
+  "c1_10text1": "Иммунная система в большинстве случаев уничтожает микроорганизмы, попадающие в человеческий организм, защищая его от болезней. Однако, ",
+  "c1_10text2": "ВИЧ – вирус иммунодефицита человека – разрушает основные клетки иммунитета (СД4 клетки). В результате наступает иммунодефицит и организм становится беззащитным перед другими инфекциями.",
+  "c1_11text1": "Состояние иммунной системы инфицированного ВИЧ человека определяется подсчетом CД4 клеток. Их количество в крови составляет в норме от 500 до 1500 клеток в 1 микролитре. Когда у человека, живущего с ВИЧ, выявляется одна или несколько оппортунистических инфекций и уровень СД4 клеток снижается ниже 200 в 1 микролитре крови, то говорят о наступлении стадии СПИДа.",
+  "c1_12text1": "Как вирус попадает в организм человека\n\n",
+  "c1_12text2": "Спасибо, что остаетесь на связи с нами. В этом разделе содержится важная информация, которая поможет определить собственные риски заражения ВИЧ и как этого можно избежать.\n\n",
+  "c1_12text3": "ВИЧ - ",
+  "c1_12text4": "это вирус иммунодефицита человека. Это означает, что им болеет только человек и вирус передается от человека к человеку.",
+  "c1_12text5": "\n\nСуществует только 3 пути передачи ВИЧ:",
+  "c1_12text6": "Половой путь",
+  "c1_12text7": "Инъекционный",
+  "c1_12text8": "От ВИЧ-позитивной матери ребенку во время беременности, родов и при кормлении грудью.",
+  "c1_13text1": "Половой путь: ",
+  "c1_13text2": "ВИЧ передается при всех видах сексуальных контактов. Особенно опасны анальные половые контакты; частая смена половых партнеров; случайные половые контакты;насильственный и групповой секс. Увеличивают риск инфицирования ВИЧ инфекций которые передаются половым путем (сифилис, гонорея и др.). ",
+  "c1_13text3": "Снижает риск инфицирования ВИЧ:",
+  "c1_13text4": "Воздержание от половых контактов; верность одному неинфицированному партнеру; использование презервативов и специальных смазок на водной основе (лубрикантов).",
+  "c1_14text1": "Инъекционый путь передачи ВИЧ возможен:",
+  "c1_14text2": "при совместном употреблении наркотиков путем инъекций; получении медицинских услуг у случайных лиц (переливание крови; хирургические операции; инъекции; лечение у табибов, сопровождающееся повреждением кожи – насечки; кровопускание; обрезание); при проведении татуировок, пирсинга, иглоукалывания нестерильным инструментом. ",
+  "c1_14text3": "Снижает риск",
+  "c1_14text4": "отказ от употребления наркотиков, использование индивидуального шприца и посуды для приготовления наркотиков; получение медицинских услуг только в медицинских учреждениях; использование стерильного инструментария при проведении татуировок, пирсинга и других процедур вне организаций здравоохранения. ",
+  "c1_15text1": "От ВИЧ-позитивной матери – ребенку.",
+  "c1_15text2": " Своевременное выявление ВИЧ-инфекции и лечение ВИЧ-инфекции снижает риск передачи ВИЧ ребенку. ",
+  "c1_16text1": "Предлагаем Вам получить консультацию по оценке и снижению риска у консультантов НПО или в медицинском центре.",
+  "c1_16text2": "\nВы можете сами определить риски инфицирования. Для этого ответьте на следующие несколько  вопросов. Если хотя бы по одному вопросу Вы ответили «да», то Вам нужно пройти консультирование и тестирование на ВИЧ, а также предпринять меры по собственной безопасности:,",
+  "c1_16text3": "Были ли у Вас сексуальные отношения?",
+  "c1_16text4": "Всегда ли Вы использовали презерватив при сексуальных контактах?",
+  "c1_16text5": "Было ли у Вас более одного полового партнера?",
+  "c1_16text6": "Были ли у Вас или Вашего полового партнера язвы на половых органах, необычные выделения из половых органов, боли внизу живота, либо проходили ли Вы лечение инфекций, которые передаются половым путем (сифилис, гонорея, трихомониаз)?",
+  "c1_17text1": "Принимали ли вы когда-либо наркотики путем инъекций, хотя бы раз?",
+  "c1_17text2": "Принимали ли Вы наркотики совместно с Вашим партнером /партнерами?",
+  "c1_17text3": "Болели ли Вы гепатитом?",
+  "c1_17text4": "\n\nСТАДИИ И ПРОЯВЛЕНИЯ ВИЧ-ИНФЕКЦИИ\n\n",
+  "c1_17text5": "В зависимости от выраженности иммунодефицита, ВИЧ-инфекцию разделяют на стадии, ориентируясь на число лимфоцитов CД4, а также на проявления инфекции, которая начинается с отсутствия проявлений и развивается до тяжелого иммунодефицита (стадия СПИДа).",
+  "c1_18text1": "Различают 4 стадии ВИЧ-инфекции, при этом 3 и 4 стадии характеризуются существенным снижением иммунитета. Их еще называют ",
+  "c1_18text2": "продвинутыми стадиями ВИЧ-инфекции. ",
+  "c1_18text3": "3-я стадия наступает при количестве СД4 клеток от 200 до 350 клеток. Когда количество СД4 клеток снижается менее 200 говорят о 4 стадии или СПИДе. ",
+  "c1_18text4": "\nПрактически невозможно определить, когда произошло заражение, за исключением случаев, когда был единичный сексуальный контакт либо единичное совместное потребление наркотиков с ЛЖВ.",
+  "c1_18text5": "\nОсобенностью ВИЧ-инфекции является длительное скрытое течение - ",
+  "c1_18text6": "Первая стадия ВИЧ-инфекции ",
+  "c1_18text7": " может длиться годами. По внешнему виду невозможно определить наличие у человека ВИЧ. Человек с ВИЧ может выглядеть и чувствовать себя здоровым, но в тоже время передавать ВИЧ другим. Кроме того, ВИЧ с момента попадания в организм, постоянно разрушает клетки иммунной системы. Поскольку ВИЧ в организме можно определить только лабораторными методами, человек обращается за медицинской помощью в продвинутой стадии ВИЧ-инфекции иногда уже с тяжелым поражением иммунной системы.",
+  "c1_19text1": "На ",
+  "c1_19text2": "Второй стадии ",
+  "c1_19text3": "может наблюдаться потеря веса (до 10%), частые заболевания и другие проявления ВИЧ-инфекции; наблюдается повышение температуры тела, утомляемость, повышенная потливость ",
+  "c1_19text4": "Дальнейшее развитие ВИЧ-инфекции связано с тяжелым поражением иммунитета ",
+  "c1_19text5": "(3 и 4 стадии). ",
+  "c1_19text6": "Проявления и течение на этих стадиях обусловлено действием оппортунистических инфекций (ОИ) – которые обычно не встречаются у людей без ВИЧ; а также частыми инфекционными заболеваниями, опухолями, может развиться слабоумие. Наиболее частыми ОИ является туберкулез и пневмоцистная пневмония. При 4 стадии наступает кахексия (полное истощение) и без лечения наступает смерть. ",
+  "c1_20text1": "Раннее начало лечения может остановить и даже вернуть на более ранние стадии заболевания. Однако часто люди поступают на стадии СПИДа иногда при полном отсутствии иммунитета, когда лечение уже не может помочь. Это могут быть люди, которые не знают о своем статусе, но есть и те, кто, зная свой статус, отказываются от лечения.\n",
+  "c1_20text2": "В настоящее время люди, живущие с ВИЧ, не должны умирать от СПИДа и оппортунистических инфекций. Для этого нужно как можно раньше начинать лечение ВИЧ-инфекции. Лечение предоставляется государством бесплатно.",
+  "c1_21text1": "\nЧТО ПРОИСХОДИТ, КОГДА ВИЧ ПОПАДАЕТ В ОРГАНИЗМ ЧЕЛОВЕКА?\n\n",
+  "c1_21text2": "ВИЧ-инфекция ",
+  "c1_21text3": "– это хроническое инфекционное заболевание, вызываемое вирусом иммунодефицита человека (ВИЧ), протекающее с поражением иммунной системы. При отсутствии лечения ВИЧ-инфекция приводит к появлению инфекционных заболеваний, опухолей и к развитию синдрома приобретённого иммунного дефицита (СПИД). ",
+  "c1_21text4": "\nКогда ВИЧ попадает в организм человека, он атакует клетки иммунной системы, а именно, Т-лимфоциты помощники (CД4 клетки). В результате пораженная клетка начинает сама производить вирусы. В результате клетка не может защищать организм и погибает. До 10 миллиардов новых вирусных частиц вырабатываются в день и миллионы CД4 клеток разрушаются ежедневно. Новые вирусы выходят из клетки и поражают другие СД-4 клетки. Уменьшение числа CД4 клеток приводит к снижению иммунитета, который уже не может защищать организм от возбудителей инфекционных и других заболеваний, которые редко наблюдаются у лиц с сильной иммунной системой. Их называют СПИД-индикаторными заболеваниями или ",
+  "c1_21text5": "оппортунистическими инфекциями. ",
+  "c1_21text6": "",
+  "c1_22text1": "Механизм размножения ВИЧ",
+  "c1_22text2": "Состояние иммунной системы инфицированного ВИЧ человека определяется подсчетом CД4 клеток. Их количество в крови составляет в норме от 500 до 1500 клеток в 1 микролитре. Когда у человека, живущего с ВИЧ, выявляется одна или несколько оппортунистических инфекций и уровень СД4 клеток снижается ниже 200 в 1 микролитре крови, то говорят о наступлении стадии СПИДа.",
+  "c1_23text1": "\n\nКак ВИЧ-не передается\n\n",
+  "c1_23text2": "Для каждого из нас важно знать, как ВИЧ не передается, чтобы перестать бояться того, что не опасно, а снижать риск там, где опасно; уметь обезопасить себя и окружающих. Помните, что ВИЧ передается только тремя путями (посмотрите этот раздел).",
+  "c1_23text3": "\n\nВИЧ не передается\n",
+  "c1_23text4": "При объятии, рукопожатии, поцелуе При кашле и чихании",
+  "c1_24text1": "При кашле и чихании",
+  "c1_24text2": "При приготовлении и принятии пищи; при пользовании общей посудой, столовыми приборами, полотенцами и постельным бельем. При общении пользовании книгами, бытовыми приборами",
+  "c1_25text1": "При пользовании туалетом, душем, ванной; при плавании в бассейне, при занятиях спортом",
+  "c1_25text2": "При укусах насекомых (комаров, москитов, пчел). При общении и укусах животных",
+  "c1_26text1": "\nЧеловек, живущий с ВИЧ не опасен в быту. Вы можете общаться, проживать в одной комнате, учиться в одном классе, одной группе; сидеть за одним столом; ходить в клубы, в кафе, на дискотеки, вместе отдыхать. ",
+  "c1_27text1": "Что делать, если мне сообщили о положительном ВИЧ-статусе?\n",
+  "c1_27text2": "Нужно подумать о том, что могло привести к заражению ВИЧ, и сделать свой собственный выбор – продолжить жизнь, как она есть, или изменить ее к лучшему. ",
+  "c1_27text3": "Нужно подумать и принять ответственное решение в отношении своей семейной жизни. Наличие ВИЧ-инфекции не означает прекращение сексуальной жизни, не ограничивает  возможности создания семьи и рождения здоровых детей. Важно помнить о риске заражения полового партнера и вашего новорожденного ребенка. Вам поможет обсуждение  ВИЧ-статуса с половым партнером. Раннее начало АРТ, неопределяемая вирусная нагрузка, использование средств защиты (презерватив) позволят предотвратить передачу ВИЧ половому партнеру, а также планировать беременность и рождение здоровых детей.",
+  "c1_28text1": "Раскрытие близкому человеку/половому партнеру своего ВИЧ-статуса поможет Вам справиться со стрессом и получить поддержку от близких Вам лиц.",
+  "c1_28text2": "Благодаря Антиретровирусной терапии (АРТ) люди с ВИЧ могут прожить долгую и плодотворную жизнь, и для этого нужно:",
+  "c1_28text3": "принимать АРТ постоянно, соблюдая рекомендации лечащего врача;",
+  "c1_28text4": "при наличии других заболеваний, таких как туберкулез, потребление алкоголя или наркотиков, обратиться к специалистам для получения соответствующего лечения, наряду с АРТ; ",
+  "c1_28text5": "при необходимости, пройти вакцинацию для предупреждения таких инфекций, как грипп, КОВИД, вирусный гепатит (по назначению врача);",
+  "c1_28text6": "отказаться от курения либо существенно ограничить количество сигарет;",
+  "c1_29text1": "при потреблении наркотиков начать поддерживающую терапию метадоном. ",
+  "c1_29text2": "хорошее питание, употребление безопасной питьевой воды;",
+  "c1_29text3": "правильно организовать свой распорядок дня, чередовать работу, отдых и физическую активность.",
+  "c1_29text4": "Помнить, что любая инфекция для человека с ВИЧ значительно опаснее, чем для человека без ВИЧ, поэтому следует строго следовать мерам профилактики инфекционных заболеваний, поскольку не только Вы можете инфицировать своих партнеров, но и  сами получить дополнительную инфекцию.",
+  "c1_30text1": "Следует помнить, что ЛЖВ может повторно заразиться другой разновидностью ВИЧ, что создает большую угрозу его здоровью.",
+  "c1_30text2": "Люди, с которыми Вы имели половые контакты или использовали общие шприцы, также могут быть инфицированы ВИЧ и не знать об этом. Им нужно предложить пройти тестирование на ВИЧ, чтобы своевременно начать лечение, сохранить здоровье и жизнь. "
 }
 
